# sphinx_simpleversion

./: README.md  pyproject.toml
src/sphinx_simpleversion/: __init__.py
